--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "postinstall": "chmod +x ./node_modules/.bin/vite",
-    "build": "vite build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
@@ -19,7 +20,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "^5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.3"
   },
@@ -27,7 +27,7 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
-    "vite": "^3.2.11"
+    "vite": "^3.2.3"
   },
-  "proxy": "https://merng.fly.dev/"
+  "proxy": "https://social-media-app-5c0s.onrender.com/"
 }
